--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "reactstrap": "^9.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.6"
   },
