--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,12 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "target": "es5",
+    "jsx": "react",
+    "esModuleInterop": true,
+    "strict": true,
+    
   },
   "include": ["vite.config.ts"]
 }
